--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,8 +2,10 @@
     display: flex;
     justify-content: space-between;
     width: auto;
-    height: 40px;
-    border: 1px solid red;
+    height: 50px;
+    /* border: 1px solid red; */
+    padding: 0px 30px;
+    margin-top: 10px;
 }
 
 .header_business_logo_wrapper img{
@@ -16,6 +18,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    z-index: 21;
 }
 /* .line_1, .line_2, .line_3{
     width: 5px;
@@ -24,4 +27,21 @@
 /* .hamburger_icon{
     display: flex;
 } */
+
+.sidebar_wrapper{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: calc(100% - 20px);
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: center;
+    z-index: 20;
+}
+.navigation_element{
+    list-style: none;
+    font-size: 18px;
+}
 
